[package]
name = "tensorflow_proto"
version = "0.1.0"
authors = ["Phillip Cloud <cloud@standard.ai>"]
edition = "2018"

[dependencies]
protobuf = "2"
prost = "0.6.1"
prost-types = "0.6.1"
thiserror = "1.0.20"

[build-dependencies]
prost-build = "0.6.1"
walkdir = "2.3.1"
anyhow = "1.0.32"
glob = "0.3.0"
