[workspace]

members = [
    "tensorflow_proto",
    "tensorflow_proto_derive",
]

[patch.crates-io]
prost = { git = "https://github.com/danburkert/prost", rev = "a1cccbcee343e2c444e1cd2738c7fba2599fc391" }
prost-build = { git = "https://github.com/danburkert/prost", rev = "a1cccbcee343e2c444e1cd2738c7fba2599fc391" }
