[package]
name = "tensorflow_proto"
version = "0.3.0"
authors = ["Phillip Cloud <cloud@standard.ai>"]
edition = "2018"
description = "Rust structs for Tensorflow Protocol buffers."
license-file = "../LICENSE"
documentation = "https://docs.rs/tensorflow_proto"
homepage = "https://github.com/cpcloud/tensorflow_proto"
repository = "https://github.com/cpcloud/tensorflow_proto"
keywords = ["tensorflow", "protobuf", "config", "serde"]
readme = "../README.md"

[lib]
# Disable doctests because the generated Prost structures have a bunch of non-rust code
doctest = false

[features]
serde-derive = ["serde", "tensorflow_proto_derive/serde"]
convert = ["tensorflow_proto_derive/convert"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
tensorflow_proto_derive = { version = "0.1.0" , path = "../tensorflow_proto_derive", optional = true }
prost = "0.7"

[build-dependencies]
anyhow = "1.0.32"
glob = "0.3.0"
prost-build = "0.7"

[dev-dependencies]
serde_json = "1.0.57"
